Race condition in WebProcessProxy::handleGetPlugins(). <http://webkit.org/b/99903> <rdar://problem/12541471>

Reviewed by Anders Carlsson.

Scope the Vector<PluginModuleInfo> so that all the destructors are guaranteed
to have run when sendDidGetPlugins() executes on the main thread.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::handleGetPlugins):


Canonical link: https://commits.webkit.org/117910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131975 268f45cc-cd09-0410-ab3c-d52691b4dbfc